refactor: remove mybatis dependency in favor of jpa